# development_learning

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md
.github/: FUNDING.yml
python/jwitterApi/: .gitignore  README.rst  app.py  requirements.txt  setup.cfg
python/jwitterApi/data/: __init__.py
python/jwitterApi/src/: __init__.py
python/jwitterApi/src/core/appwrite/: appwrite_client.py
python/jwitterApi/src/user/: user.py
python/jwitterApi/src/utils/: constants.py
python/renter/: .gitignore  README.rst  __init__.py  app.py  requirements.txt  setup.cfg
python/renter/postman_collection/: archive.json
python/renter/postman_collection/collection/: 083babe0-55a5-4193-8fbc-d0b7b4333658.json  6409d70d-ac78-4035-9034-0f77965844c9.json  9d475521-f668-4648-9005-e14e0c9ea8f8.json  f2bc1a74-72d8-4e7b-a8f3-9f0a5797b517.json  f721877e-bc51-4b4b-9af5-379b26880663.json  fc7841cb-f848-460d-b5b9-1c2c5bc84de2.json
python/renter/postman_collection/environment/: a58edc65-a4c5-4c92-beac-44b33046f965.json
python/renter/src/: __init__.py  db.py  renter.py  user.py
python/renter/src/core/: modals.py
python/renter/src/core/services/: db.py
python/renter/src/filter/: filter.py
python/renter/src/firebase/: firebase.py
python/renter/src/location/: location.py
python/renter/src/property/: property.py
python/renter/src/renter/: renter.py
python/renter/src/search/: search.py
python/renter/src/user/: user.py
python/renter/src/utils/: __init__.py  constants.py  default_response.py  response_mapper.py  util_calls.py
python/renter/templates/: information.html
(+4054 files in other folders)
