[metadata]
name = JwitterApi
version = 0.0.1
license = MIT
description = A REST API for Jwitter
long_description = file: README.rst
author = Pradyot Prakash
classifiers=
   Framework :: IPython

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   appwrite
   validate_email

[options.packages.find]
where=src