[metadata]
name = Renter
version = 0.0.1
license = MIT
description = A REST API for Renter
long_description = file: README.rst
author = Pradyot Prakash
classifiers=
   Framework :: Flask
   Framework :: IPython

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   flask
   loguru

[options.packages.find]
where=src